M3S-11 M3S-13 debugged a lot, added features
